--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ informa linguagem da pag-->
 
         <!--Designar caracteres em portugues -->
         <meta charset="UTF-8"> 
-
+        
         <!--texto da Aba do navegador-->
         <title> Barbearia alura </title>
 
@@ -19,21 +19,41 @@ informa linguagem da pag-->
     </head>
 
     <body> 
-        <img id="banner" src="banner.jpg">      
-        <h1> Sobre a barbearia Alura </h1>
+        <header>
+            <h1 class="tituloprincipal" >Barbearia alura</h1>
+        </header>
 
-        <p>Localizada no coração da cidade a <strong> Barbearia Alura </strong> traz para 
-        o mercado o que há de melhor para o seu cabelo e barba.
-        Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos 
-        clientes a cada dia.</p>
+        <img id="banner" src="banner.jpg">   
+        <div class="principal">   <!-- Com a <div> dividimos blocos de conteudos-->
+            <h2 class="textocentralizado"> Sobre a barbearia Alura </h2>
 
-        <p id="missao"><em> A nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong>
-        </em></p>
+            <p>Localizada no coração da cidade a <strong> Barbearia Alura </strong> traz para 
+            o mercado o que há de melhor para o seu cabelo e barba.
+            Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos 
+            clientes a cada dia.
+                    <!--Com a id identificamos apenas um elemento -->
+            <p id="missao"><em> A nossa missão é: <strong>"Proporcionar 
+                auto-estima e qualidade de vida aos clientes".</strong>
+                </em>
+            </p>
 
-        <p> profissionais experientes e antenados às mudanças no mundo da moda. 
-        O atendimento possui padrão de excelência e agilidade, garantindo qualidade e 
-        satisfação dos nossos clientes.
-        </p>
+            <p> profissionais experientes e antenados às mudanças no mundo da moda. 
+            O atendimento possui padrão de excelência e agilidade, garantindo qualidade e 
+            satisfação dos nossos clientes.
+            </p>
+        </div>
+
+    <div class="beneficios"> 
+        <h3 class="textocentralizado">Benefícios</h3>
+                            <!--Com a class conseguimos identificar varios elementos-->
+        <ul>
+            <li class ="itens">Atendimento aos cliente</li>
+            <li class ="itens">Espaço diferenciado</li>
+            <li class ="itens">Localização</li>
+            <li class ="itens">Profissionais qualificados</li>
+        </ul>
+        <img src="beneficios.jpg" alt="Barbeiro sendo" class="imagembeneficios">
+    </div>
 
     </body>
 </html>
