--- a/produtos.html
+++ b/produtos.html
@@ -4,13 +4,20 @@
     
     <head>
         <meta charset = "UTF-8">
-        <title>Produtos alura - Barbearia alura </title>
+        <title>Produtos alura - Barbearia alura</title>
         <link rel="stylesheet" href="produtos.css">  
     </head>
 
     <body>
-    
-
+        <Header>
+            <h1><img src="logo.png"</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="produtos.html">Produtos</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </Header>
     </body>
-
 </html>
